--- a/unknown_bjl3my.pulse.json
+++ b/unknown_bjl3my.pulse.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_bjl3my.pulse",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_bjl3my.pulse",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570699615239,
+	"last_scraped": 1570712037531,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570686671695,
-	"edit": 173,
-	"next_scrape": 1570740101050,
+	"updt": 1570699750491,
+	"edit": 174,
+	"next_scrape": 1570751707554,
 	"category": "coin_flipper",
-	"last_update": 1570699615239,
+	"last_update": 1570712037531,
 	"output": [
 		{
 			"args": {},
-			"calls": 1602935,
+			"calls": 1614316,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"you c",
