--- a/unknown_da6i0q.still_alive.json
+++ b/unknown_da6i0q.still_alive.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_da6i0q.still_alive",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_da6i0q.still_alive",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570702309307,
+	"last_scraped": 1570714416994,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570689828279,
-	"edit": 8,
+	"updt": 1570714413182,
+	"edit": 10,
 	"scrape_ct": 11,
-	"next_scrape": 1570748352898,
+	"next_scrape": 1570758818631,
 	"category": "clicker",
-	"last_update": 1570702309307,
+	"last_update": 1570714416994,
 	"output": [
 		{
 			"args": {},
-			"calls": 49470,
+			"calls": 57718,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"receiv",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 40168,
+			"calls": 58088,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"receiv",
@@ -107,6 +107,11 @@
 				"36 Is th",
 				"2A I am "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
