--- a/uknown_tkrb2y.flush.json
+++ b/uknown_tkrb2y.flush.json
@@ -6,22 +6,22 @@
 	"sector": "HJG_2723",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570702590330,
+	"last_scraped": 1570714617526,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570690277963,
-	"edit": 15,
-	"next_scrape": 1570748425765,
+	"updt": 1570702685901,
+	"edit": 16,
+	"next_scrape": 1570761394087,
 	"category": "fishie_tank",
-	"last_update": 1570702590330,
+	"last_update": 1570714629840,
 	"output": [
 		{
 			"args": {},
-			"calls": 99067,
+			"calls": 109847,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"rstood",
@@ -51,7 +51,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 9836,
+			"calls": 10273,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -125,6 +125,11 @@
 				" if we k",
 				" don't t"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
