--- a/unknown_eshkz0.extern_mn7ty3.json
+++ b/unknown_eshkz0.extern_mn7ty3.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_eshkz0.extern_mn7ty3",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_eshkz0.extern_mn7ty3",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570702349760,
+	"last_scraped": 1570714478417,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570689828279,
-	"edit": 9,
+	"updt": 1570702685901,
+	"edit": 10,
 	"scrape_ct": 16,
-	"next_scrape": 1570745751226,
+	"next_scrape": 1570761253736,
 	"category": "fishie_tank",
-	"last_update": 1570702349760,
+	"last_update": 1570714478417,
 	"output": [
 		{
 			"args": {},
-			"calls": 47907,
+			"calls": 51330,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ons. ",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4607,
+			"calls": 5563,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 55966,
+			"calls": 60459,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ons. ",
