--- a/uknown_gyuk8v.iscord_link.json
+++ b/uknown_gyuk8v.iscord_link.json
@@ -6,17 +6,17 @@
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565704439572,
-	"last_scraped": 1570703805743,
+	"last_scraped": 1570715311334,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565704439572
 		}
 	],
-	"updt": 1570691405443,
-	"edit": 15,
+	"updt": 1570703811212,
+	"edit": 16,
 	"scrape_ct": 20,
-	"next_scrape": 1570748643592,
+	"next_scrape": 1570761234105,
 	"category": "clicker",
 	"last_update": 1570703805743,
 	"output": [
@@ -177,6 +177,14 @@
 				"appening",
 				" because"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
 		}
 	]
 }
