--- a/uknown_tkrb2y.flush.json
+++ b/uknown_tkrb2y.flush.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_tkrb2y.flush",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_tkrb2y.flush",
 	"sector": "HJG_2723",
 	"sec_level": 4,
@@ -13,11 +13,11 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570702685901,
-	"edit": 16,
+	"updt": 1570714638559,
+	"edit": 17,
 	"next_scrape": 1570761394087,
 	"category": "fishie_tank",
-	"last_update": 1570714629840,
+	"last_update": 1570714648147,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 10273,
+			"calls": 11336,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
