--- a/uknown_lx2epa.bbs.json
+++ b/uknown_lx2epa.bbs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lx2epa.bbs",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_lx2epa.bbs",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1561431825883,
-	"last_scraped": 1570705896048,
+	"last_scraped": 1570717728512,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,7 +26,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"Please give me a `Nmode` : `V\\\"read\\\"` or `V\\\"write\\\"` to proceed.\"}",
-	"next_scrape": 1570789799448,
-	"updt": 1570693889467,
-	"edit": 108
+	"next_scrape": 1570802232542,
+	"updt": 1570706066019,
+	"edit": 109
 }
