--- a/uknown_lx2epa.sha256.json
+++ b/uknown_lx2epa.sha256.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_lx2epa.sha256",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_lx2epa.sha256",
 	"sector": "K_5861",
 	"sec_level": 4,
@@ -27,6 +27,6 @@
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You didn't give me any plaintext. Please pass txt:\\\"textToHash\\\"\"}",
 	"next_scrape": 1570790165396,
-	"updt": 1570693889467,
-	"edit": 101
+	"updt": 1570717801174,
+	"edit": 103
 }
