--- a/unknown_czv1dd.looter.json
+++ b/unknown_czv1dd.looter.json
@@ -47,11 +47,17 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"X2BC7",
 						"MFT0X",
-						"A_SEC",
+						"T0X7A_",
 						"CT0XF2",
 						"2BC7D17",
-						"FILE0X2B"
+						"0XF227_",
+						"0XBF_CL",
+						"F_CLST0X",
+						"FILE0X2B",
+						"A_SECT0X",
+						"0X7A_SEC"
 					]
 				}
 			]
@@ -134,82 +140,165 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
+						"X2BC74",
+						"X2BC72",
 						"_SECT04",
+						"_SECT02",
+						"T0X7A_2",
+						"4T0X7A_",
+						"4GX2BC7",
+						"2_SECT0",
 						"2T0X7A_",
+						"2GX2BC7",
+						"_SECT0 4",
+						"_SECT0 2",
+						"T0X7A_ 4",
+						"T0X7A_ 2",
 						"4G_SECT0",
+						"4GCX2BC7",
+						"40XF227_",
+						"40XBF_CL",
+						"2G_SECT0",
+						"2GT0X7A_",
+						"20XF227_",
+						"20XBF_CL",
+						"0XF227_4",
 						"0XBF_CL4",
 						"0XBF_CL2",
 						"_SECT0N 4",
+						"_SECT0N 2",
 						"T0X7A_N 4",
+						"T0X7A_N 2",
 						"F_CLST0X2",
+						"A_SECT0X4",
+						"4GCT0X7A_",
 						"4G0XBF_CL",
 						"4F_CLST0X",
+						"40X7A_SEC",
 						"2¤0XF227_",
 						"2GCT0X7A_",
+						"2G0XBF_CL",
 						"2F_CLST0X",
+						"0XF227_ 4",
 						"0XF227_ 2",
+						"0XBF_CL 4",
 						"0XBF_CL 2",
+						"0X7A_SEC2",
+						"F_CLST0X¡4",
+						"A_SECT0X 2",
+						"4GC0XBF_CL",
+						"4GA_SECT0X",
+						"4G0X7A_SEC",
+						"2GF_CLST0X",
+						"2GC0XF227_",
 						"2G0X7A_SEC",
+						"0XF227_N 4",
 						"0XF227_N 2",
+						"0X7A_SEC 4",
+						"0X7A_SEC 2",
+						"F_CLST0XN 4",
+						"A_SECT0XN 2",
 						"4GCF_CLST0X",
+						"4GCA_SECT0X",
 						"4GC0X7A_SEC",
-						"2GC0X7A_SEC"
+						"2GCA_SECT0X",
+						"2GC0X7A_SEC",
+						"0X7A_SECN 4",
+						"0X7A_SECN 2"
 					]
 				},
 				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
 					"frags": [
-						"X2BC7",
-						"A_SECT0X"
+						"4_SECT0"
 					]
 				},
 				{
-					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"document": "Erin File",
 					"frags": [
-						"A_SECT0X"
+						"4_SECT0"
 					]
 				},
 				{
-					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"document": "Essence",
 					"frags": [
-						"A_SECT0X"
-					]
-				},
-				{
-					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
-					"frags": [
-						"A_SECT0X"
+						"4_SECT0"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1570592208531,
-	"edit": 8,
+	"updt": 1570603935181,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
+				"X2BC74",
+				"X2BC72",
 				"_SECT04",
+				"_SECT02",
+				"T0X7A_2",
+				"4T0X7A_",
+				"4GX2BC7",
+				"2_SECT0",
 				"2T0X7A_",
+				"2GX2BC7",
+				"_SECT0 4",
+				"_SECT0 2",
+				"T0X7A_ 4",
+				"T0X7A_ 2",
 				"4G_SECT0",
+				"4GCX2BC7",
+				"40XF227_",
+				"40XBF_CL",
+				"2G_SECT0",
+				"2GT0X7A_",
+				"20XF227_",
+				"20XBF_CL",
+				"0XF227_4",
 				"0XBF_CL4",
 				"0XBF_CL2",
 				"_SECT0N 4",
+				"_SECT0N 2",
 				"T0X7A_N 4",
+				"T0X7A_N 2",
 				"F_CLST0X2",
+				"A_SECT0X4",
+				"4GCT0X7A_",
 				"4G0XBF_CL",
 				"4F_CLST0X",
+				"40X7A_SEC",
 				"2¤0XF227_",
 				"2GCT0X7A_",
+				"2G0XBF_CL",
 				"2F_CLST0X",
+				"0XF227_ 4",
 				"0XF227_ 2",
+				"0XBF_CL 4",
 				"0XBF_CL 2",
+				"0X7A_SEC2",
+				"F_CLST0X¡4",
+				"A_SECT0X 2",
+				"4GC0XBF_CL",
+				"4GA_SECT0X",
+				"4G0X7A_SEC",
+				"2GF_CLST0X",
+				"2GC0XF227_",
 				"2G0X7A_SEC",
+				"0XF227_N 4",
 				"0XF227_N 2",
+				"0X7A_SEC 4",
+				"0X7A_SEC 2",
+				"F_CLST0XN 4",
+				"A_SECT0XN 2",
 				"4GCF_CLST0X",
+				"4GCA_SECT0X",
 				"4GC0X7A_SEC",
-				"2GC0X7A_SEC"
+				"2GCA_SECT0X",
+				"2GC0X7A_SEC",
+				"0X7A_SECN 4",
+				"0X7A_SECN 2"
 			]
 		},
 		{
@@ -217,28 +306,33 @@
 			"frags": [
 				"X2BC7",
 				"MFT0X",
+				"T0X7A_",
 				"CT0XF2",
 				"2BC7D17",
+				"0XF227_",
+				"0XBF_CL",
+				"F_CLST0X",
 				"FILE0X2B",
-				"A_SECT0X"
+				"A_SECT0X",
+				"0X7A_SEC"
 			]
 		},
 		{
-			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
 			"frags": [
-				"A_SECT0X"
+				"4_SECT0"
 			]
 		},
 		{
-			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"document": "Erin File",
 			"frags": [
-				"A_SECT0X"
+				"4_SECT0"
 			]
 		},
 		{
-			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"document": "Essence",
 			"frags": [
-				"A_SECT0X"
+				"4_SECT0"
 			]
 		}
 	],
