--- a/unknown_0jkcl8.bot_scam_do_not_run.json
+++ b/unknown_0jkcl8.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_0jkcl8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0jkcl8.bot_scam_do_not_run",
 	"sector": "K_2217",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570708398103,
+	"last_scraped": 1570720544938,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570696369425,
-	"edit": 7,
+	"updt": 1570708547937,
+	"edit": 8,
 	"scrape_ct": 8,
-	"next_scrape": 1570749655739,
+	"next_scrape": 1570761666410,
 	"category": "clicker",
-	"last_update": 1570708398103,
+	"last_update": 1570720544938,
 	"output": [
 		{
 			"args": {},
-			"calls": 56479,
+			"calls": 62355,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"X7A_S",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 59961,
+			"calls": 62911,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"X7A_S",
@@ -135,6 +135,11 @@
 				"7A_SECT0",
 				"0XBF_CLS"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
