--- a/uknown_xgmr0j.xfer.json
+++ b/uknown_xgmr0j.xfer.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_xgmr0j.xfer",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xgmr0j.xfer",
 	"sector": "K_0542",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570708097629,
+	"last_scraped": 1570720312298,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570708095552,
-	"edit": 8,
+	"updt": 1570708321406,
+	"edit": 9,
 	"scrape_ct": 18,
-	"next_scrape": 1570747941951,
+	"next_scrape": 1570762379886,
 	"category": "fishie_tank",
-	"last_update": 1570708097629,
+	"last_update": 1570720353094,
 	"output": [
 		{
 			"args": {},
-			"calls": 50086,
+			"calls": 54451,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"0 0100",
@@ -46,7 +46,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4839,
+			"calls": 6449,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -105,6 +105,11 @@
 				"0000 00",
 				" 0100 00"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
