--- a/unknown_wt9h2y.flush.json
+++ b/unknown_wt9h2y.flush.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_wt9h2y.flush",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_wt9h2y.flush",
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1563656292128,
-	"last_scraped": 1570710508101,
+	"last_scraped": 1570723747544,
 	"script_log": [
 		{
 			"type": "added",
@@ -30,16 +30,16 @@
 		}
 	],
 	"pl_output": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
-	"next_scrape": 1570756864365,
-	"updt": 1570698399517,
-	"edit": 144,
+	"next_scrape": 1570814043138,
+	"updt": 1570710577471,
+	"edit": 145,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570710508101,
+	"last_update": 1570723747544,
 	"output": [
 		{
 			"args": {},
-			"calls": 1512,
+			"calls": 1802,
 			"base": ":flush: 0\n{\"ok\":false,\"msg\":\"Your account balance of 0GC is too low to send 1GC.\"}",
 			"fragments": [
 				"ticali",
