--- a/unknown_yprlbk.big_red_button.json
+++ b/unknown_yprlbk.big_red_button.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_yprlbk.big_red_button",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yprlbk.big_red_button",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570710427884,
+	"last_scraped": 1570723677123,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570698399517,
-	"edit": 11,
-	"next_scrape": 1570751012578,
+	"updt": 1570710577471,
+	"edit": 12,
+	"next_scrape": 1570770161052,
 	"category": "clicker",
-	"last_update": 1570710427884,
+	"last_update": 1570723677123,
 	"output": [
 		{
 			"args": {},
-			"calls": 90938,
+			"calls": 97334,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ubmit",
@@ -49,7 +49,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 97765,
+			"calls": 107930,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ubmit",
@@ -113,6 +113,11 @@
 				"he same",
 				"rvives' "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
