--- a/uknown_4a949e.break.json
+++ b/uknown_4a949e.break.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_4a949e.break",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_4a949e.break",
 	"sector": "VNP_5717",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563716096218
+		},
+		{
+			"type": "died",
+			"when": 1570723594338
 		}
 	],
 	"scrape_ct": 19,
@@ -1369,8 +1373,8 @@
 			]
 		}
 	],
-	"updt": 1568707628144,
-	"edit": 7,
+	"updt": 1570602128402,
+	"edit": 8,
 	"pl_output": "YOU COULD WIN 1GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
 		{
