--- a/unknown_xd8wkn.public.json
+++ b/unknown_xd8wkn.public.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_xd8wkn.public",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_xd8wkn.public",
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569178793908,
-	"last_scraped": 1570710699750,
+	"last_scraped": 1570724020280,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1570753263168,
+	"next_scrape": 1570764215108,
 	"category": "fishie_tank",
-	"last_update": 1570710699750,
+	"last_update": 1570724029996,
 	"output": [
 		{
 			"args": {},
-			"calls": 40352,
+			"calls": 54601,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"d and",
@@ -48,7 +48,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 3701,
+			"calls": 4268,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -106,8 +106,8 @@
 			]
 		}
 	],
-	"updt": 1570698622970,
-	"edit": 5,
+	"updt": 1570710802393,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "Proving/Children",
@@ -119,6 +119,11 @@
 				" So the",
 				"pt, or l"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
