--- a/uknown_k3hkgg.translate.json
+++ b/uknown_k3hkgg.translate.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_k3hkgg.translate",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_k3hkgg.translate",
 	"sector": "HJG_8307",
 	"sec_level": 4,
 	"date_added": 1562336992224,
-	"last_scraped": 1570713442856,
+	"last_scraped": 1570726595497,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562336992224
 		}
 	],
-	"updt": 1570701557221,
-	"edit": 10,
-	"next_scrape": 1570758445352,
+	"updt": 1570713508118,
+	"edit": 11,
+	"next_scrape": 1570771027420,
 	"category": "clicker",
-	"last_update": 1570713442856,
+	"last_update": 1570726595497,
 	"output": [
 		{
 			"args": {},
-			"calls": 50087,
+			"calls": 58948,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stion",
@@ -63,7 +63,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 57053,
+			"calls": 65737,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stion",
@@ -105,7 +105,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 11331,
+			"calls": 12080,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"stion",
