--- a/uknown_yr7sj1.accts_balance.json
+++ b/uknown_yr7sj1.accts_balance.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_yr7sj1.accts_balance",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_yr7sj1.accts_balance",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570714165373,
+	"last_scraped": 1570727137224,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570702232555,
-	"edit": 6,
+	"updt": 1570714186975,
+	"edit": 7,
 	"scrape_ct": 16,
-	"next_scrape": 1570758411573,
+	"next_scrape": 1570768970892,
 	"category": "clicker",
-	"last_update": 1570714165373,
+	"last_update": 1570727137224,
 	"output": [
 		{
 			"args": {},
-			"calls": 31288,
+			"calls": 36032,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"a prin",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 53829,
+			"calls": 64810,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"a prin",
@@ -86,7 +86,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5934,
+			"calls": 7679,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"a prin",
