--- a/uknown_b23kas.com.json
+++ b/uknown_b23kas.com.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_b23kas.com",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_b23kas.com",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1565099817917,
-	"last_scraped": 1570719265815,
+	"last_scraped": 1570730994278,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565099817917
 		}
 	],
-	"next_scrape": 1570758904069,
+	"next_scrape": 1570777410628,
 	"category": "coin_flipper",
-	"last_update": 1570719265815,
+	"last_update": 1570730994278,
 	"output": [
 		{
 			"args": {},
-			"calls": 2124184,
+			"calls": 2145682,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"to for",
@@ -61,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1570707195226,
-	"edit": 214
+	"updt": 1570719376112,
+	"edit": 215
 }
