--- a/unknown_1773wk.shfflr_key.json
+++ b/unknown_1773wk.shfflr_key.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_1773wk.shfflr_key",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_1773wk.shfflr_key",
 	"sector": "SPC_6164",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570723589869,
+	"last_scraped": 1570733929916,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570710577471,
-	"edit": 21,
-	"next_scrape": 1570765971082,
+	"updt": 1570723884470,
+	"edit": 22,
+	"next_scrape": 1570776272719,
 	"category": "coin_flipper",
-	"last_update": 1570723589869,
+	"last_update": 1570733929916,
 	"output": [
 		{
 			"args": {},
-			"calls": 172791,
+			"calls": 185027,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"of th",
