--- a/uknown_2nb382.t_v2_mng.json
+++ b/uknown_2nb382.t_v2_mng.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_2nb382.t_v2_mng",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_2nb382.t_v2_mng",
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570727376442,
+	"last_scraped": 1570737103820,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570714413182,
-	"edit": 8,
+	"updt": 1570727488299,
+	"edit": 9,
 	"scrape_ct": 17,
-	"next_scrape": 1570772774959,
+	"next_scrape": 1570780766595,
 	"category": "fishie_tank",
-	"last_update": 1570727376442,
+	"last_update": 1570737152252,
 	"output": [
 		{
 			"args": {},
-			"calls": 49304,
+			"calls": 53327,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ld ac",
@@ -78,7 +78,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 5759,
+			"calls": 7442,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -228,6 +228,11 @@
 			"frags": [
 				"vironme"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
