--- a/uknown_gyuk8v.iscord_link.json
+++ b/uknown_gyuk8v.iscord_link.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_gyuk8v.iscord_link",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_gyuk8v.iscord_link",
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565704439572,
-	"last_scraped": 1570727920769,
+	"last_scraped": 1570737545939,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565704439572
 		}
 	],
-	"updt": 1570715766795,
-	"edit": 17,
+	"updt": 1570727939558,
+	"edit": 18,
 	"scrape_ct": 20,
-	"next_scrape": 1570772463593,
+	"next_scrape": 1570781900856,
 	"category": "clicker",
-	"last_update": 1570727920769,
+	"last_update": 1570737545939,
 	"output": [
 		{
 			"args": {},
-			"calls": 110113,
+			"calls": 124571,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ts te",
@@ -71,7 +71,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 109583,
+			"calls": 113334,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"s ten",
@@ -177,6 +177,11 @@
 				"appening",
 				" because"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
