--- a/uknown_ch50pw.blibs.json
+++ b/uknown_ch50pw.blibs.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_ch50pw.blibs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ch50pw.blibs",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570732249838,
+	"last_scraped": 1570741515035,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570720953873,
-	"edit": 11,
+	"updt": 1570732671354,
+	"edit": 12,
 	"scrape_ct": 9,
-	"next_scrape": 1570775960933,
+	"next_scrape": 1570781379920,
 	"category": "fishie_tank",
-	"last_update": 1570732249838,
+	"last_update": 1570741515035,
 	"output": [
 		{
 			"args": {},
-			"calls": 100897,
+			"calls": 109428,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ike c",
@@ -54,7 +54,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 8553,
+			"calls": 9711,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 91450,
+			"calls": 94503,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ike c",
