--- a/unknown_srj679.loc.json
+++ b/unknown_srj679.loc.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_srj679.loc",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_srj679.loc",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -15,6 +15,6 @@
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You must transfer an amount as a GC string or a whole number. Examples: \\\"1KGC\\\" or 1000\"}",
 	"next_scrape": 1570818429550,
-	"updt": 1570725911097,
-	"edit": 20
+	"updt": 1570735823264,
+	"edit": 21
 }
