--- a/unknown_m7tgce.bot_scam_do_not_run.json
+++ b/unknown_m7tgce.bot_scam_do_not_run.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_m7tgce.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_m7tgce.bot_scam_do_not_run",
 	"sector": "HJG_2788",
 	"sec_level": 4,
 	"date_added": 1563165639066,
-	"last_scraped": 1570736610089,
+	"last_scraped": 1570745845607,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563165639066
 		}
 	],
-	"next_scrape": 1570780978664,
+	"next_scrape": 1570787730635,
 	"category": "clicker",
-	"last_update": 1570736610089,
+	"last_update": 1570745845607,
 	"output": [
 		{
 			"args": {},
-			"calls": 234545,
+			"calls": 241752,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"do to",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 254633,
+			"calls": 267171,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"do to",
@@ -141,6 +141,11 @@
 			]
 		}
 	],
-	"updt": 1570726812951,
-	"edit": 28
+	"updt": 1570736725528,
+	"edit": 29,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
