--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_puquph.game",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_puquph.game",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1559517678336,
-	"last_scraped": 1570738018790,
+	"last_scraped": 1570747031428,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,17 @@
 			}
 		]
 	],
-	"updt": 1570728841675,
-	"edit": 333,
+	"updt": 1570738301364,
+	"edit": 334,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
-	"next_scrape": 1570783914864,
+	"next_scrape": 1570791229844,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570738018790,
+	"last_update": 1570747031428,
 	"output": [
 		{
 			"args": {},
-			"calls": 6333105,
+			"calls": 6633618,
 			"base": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 			"fragments": [
 				" and ",
