--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -1,27 +1,27 @@
 {
 	"_id": "abndnd_nowjtq.hk_auction_house",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abndnd_nowjtq.hk_auction_house",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563098745814,
-	"last_scraped": 1570740751003,
+	"last_scraped": 1570751238233,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563098745814
 		}
 	],
-	"updt": 1570731546310,
-	"edit": 137,
-	"next_scrape": 1570785929486,
+	"updt": 1570740783855,
+	"edit": 138,
+	"next_scrape": 1570791849337,
 	"category": "dice_roller",
-	"last_update": 1570740751003,
+	"last_update": 1570751238233,
 	"output": [
 		{
 			"args": {},
-			"calls": 1443032,
+			"calls": 1448439,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s the",
