--- a/uknown_ax85yb.bot_scam_do_not_run.json
+++ b/uknown_ax85yb.bot_scam_do_not_run.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ax85yb.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ax85yb.bot_scam_do_not_run",
 	"sector": "SPC_0043",
 	"sec_level": 4,
 	"date_added": 1565687108587,
-	"last_scraped": 1570750460570,
+	"last_scraped": 1570759254256,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570797117017,
+	"next_scrape": 1570803717462,
 	"category": "coin_flipper",
-	"last_update": 1570750460570,
+	"last_update": 1570759254256,
 	"output": [
 		{
 			"args": {},
-			"calls": 847357,
+			"calls": 855079,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"m ## ",
@@ -68,6 +68,6 @@
 			]
 		}
 	],
-	"updt": 1570740107106,
-	"edit": 88
+	"updt": 1570750477787,
+	"edit": 89
 }
