--- a/unknown_b8wg6g.protector.json
+++ b/unknown_b8wg6g.protector.json
@@ -47,14 +47,26 @@
 				{
 					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
 					"frags": [
+						"sus t",
 						"st be",
 						"hat a",
+						" was ",
 						"re fou",
+						"nsensu",
+						"miles ",
+						"h you ",
+						" be su",
+						"ung by ",
 						"smile.'",
+						"s not a",
+						"s conse",
 						"ile.' '",
 						"e fifth",
 						" that t",
-						"t there "
+						" pictur",
+						"you foun",
+						"t there ",
+						" consens"
 					]
 				}
 			]
@@ -64,17 +76,29 @@
 		{
 			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
 			"frags": [
+				"sus t",
 				"st be",
 				"hat a",
+				" was ",
 				"re fou",
+				"nsensu",
+				"miles ",
+				"h you ",
+				" be su",
+				"ung by ",
 				"smile.'",
+				"s not a",
+				"s conse",
 				"ile.' '",
 				"e fifth",
 				" that t",
-				"t there "
+				" pictur",
+				"you foun",
+				"t there ",
+				" consens"
 			]
 		}
 	],
-	"updt": 1570747772059,
-	"edit": 178
+	"updt": 1570757690577,
+	"edit": 179
 }
