--- a/uknown_c671te.quack.json
+++ b/uknown_c671te.quack.json
@@ -6,7 +6,7 @@
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566460947728,
-	"last_scraped": 1570751908523,
+	"last_scraped": 1570760570164,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1570798370998,
+	"next_scrape": 1570803754182,
 	"category": "plant_sim",
-	"last_update": 1570751908523,
+	"last_update": 1570760570164,
 	"output": [
 		{
 			"args": {},
@@ -149,6 +149,18 @@
 				" ERROR ",
 				"X7BE4_FI"
 			]
+		},
+		{
+			"args": {},
+			"calls": 1286,
+			"base": "c:\"51m589\" d:\"<f l n s w>\"\n***\n\n\n\n               \n                Ã\n               ÁÁÁÁ\n                ÁÃ\n               ",
+			"fragments": [
+				"T0XF4_",
+				"ST ERR",
+				"LST0XC",
+				" ERROR ",
+				"X7BE4_FI"
+			]
 		}
 	],
 	"identified": [
@@ -163,6 +175,6 @@
 			]
 		}
 	],
-	"updt": 1570741460425,
-	"edit": 192
+	"updt": 1570752054642,
+	"edit": 193
 }
