--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1570751475285,
+	"last_scraped": 1570760238685,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1570791413310,
+	"next_scrape": 1570802863231,
 	"category": "plant_sim",
-	"last_update": 1570751475285,
+	"last_update": 1570760238685,
 	"output": [
 		{
 			"args": {},
@@ -297,6 +297,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 722,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n***\n\n\n        \n           Á      Á.\n            Á  ÁÁ Ã ÁÁÁÁ\n        Á  Ã/ÁÃÃ/ÁÁ/ÁÃÃÁÁÁ\n        ÃÁÁÁÁÁ ÃÁ/Ã/ÃÃÃÁ\n        ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -321,6 +338,6 @@
 			]
 		}
 	],
-	"updt": 1570741010107,
-	"edit": 125
+	"updt": 1570751828393,
+	"edit": 126
 }
