--- a/uknown_6s2peb.dcg.json
+++ b/uknown_6s2peb.dcg.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_6s2peb.dcg",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_6s2peb.dcg",
 	"sector": "HJG_8615",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570752722419,
+	"last_scraped": 1570761395063,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570742361221,
-	"edit": 20,
+	"updt": 1570752730144,
+	"edit": 21,
 	"scrape_ct": 3,
-	"next_scrape": 1570797620791,
+	"next_scrape": 1570801644167,
 	"category": "dice_roller",
-	"last_update": 1570752722419,
+	"last_update": 1570761395063,
 	"output": [
 		{
 			"args": {},
-			"calls": 186117,
+			"calls": 197390,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"152 th",
