--- a/unknown_f43glc.pub_7lfra1.json
+++ b/unknown_f43glc.pub_7lfra1.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_f43glc.pub_7lfra1",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_f43glc.pub_7lfra1",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570763705152,
+	"last_scraped": 1570772177784,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570754760175,
-	"edit": 140,
-	"next_scrape": 1570805908105,
+	"updt": 1570763787117,
+	"edit": 141,
+	"next_scrape": 1570815799754,
 	"category": "coin_flipper",
-	"last_update": 1570763705152,
+	"last_update": 1570772177784,
 	"output": [
 		{
 			"args": {},
-			"calls": 1289479,
+			"calls": 1298608,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"X7B_S",
