--- a/uknown_4wh9we.scam.json
+++ b/uknown_4wh9we.scam.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_6485",
 	"sec_level": 4,
 	"date_added": 1569297916960,
-	"last_scraped": 1570765494445,
+	"last_scraped": 1570773925731,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1570805844393,
+	"next_scrape": 1570816699882,
 	"category": "clicker",
-	"last_update": 1570765494445,
+	"last_update": 1570773925731,
 	"output": [
 		{
 			"args": {},
-			"calls": 128059,
+			"calls": 135825,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"r to y",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 79233,
+			"calls": 86957,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"r to y",
@@ -121,6 +121,11 @@
 			]
 		}
 	],
-	"updt": 1570756563147,
-	"edit": 11
+	"updt": 1570765592068,
+	"edit": 12,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
