--- a/unknown_uzgzcp.config.json
+++ b/unknown_uzgzcp.config.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_uzgzcp.config",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_uzgzcp.config",
 	"sector": "SPC_0993",
 	"sec_level": 4,
 	"date_added": 1569135317544,
-	"last_scraped": 1570765393223,
+	"last_scraped": 1570773785407,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570806506492,
+	"next_scrape": 1570814310358,
 	"category": "clicker",
-	"last_update": 1570765393223,
+	"last_update": 1570773785407,
 	"output": [
 		{
 			"args": {},
-			"calls": 73234,
+			"calls": 82497,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stion",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 75146,
+			"calls": 83426,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stion",
@@ -76,7 +76,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 11989,
+			"calls": 13140,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"stion",
@@ -114,6 +114,6 @@
 			]
 		}
 	],
-	"updt": 1570756563147,
-	"edit": 11
+	"updt": 1570765592068,
+	"edit": 12
 }
