--- a/uknown_2q8bmy.decorruptor.json
+++ b/uknown_2q8bmy.decorruptor.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_2q8bmy.decorruptor",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_2q8bmy.decorruptor",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1561837134116,
-	"last_scraped": 1570774588837,
+	"last_scraped": 1570781914228,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,17 @@
 			}
 		]
 	],
-	"updt": 1570766492165,
-	"edit": 232,
+	"updt": 1570774614021,
+	"edit": 233,
 	"pl_output": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
-	"next_scrape": 1570815009321,
+	"next_scrape": 1570821691438,
 	"scrape_ct": 14,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570774588837,
+	"last_update": 1570781914228,
 	"output": [
 		{
 			"args": {},
-			"calls": 476903,
+			"calls": 482355,
 			"base": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
 			"fragments": [
 				"in fr",
