--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_ypswbu.gbdis",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "uknown_ypswbu.gbdis",
 	"sector": "NGC_1037",
 	"sec_level": 4,
 	"date_added": 1564248854714,
-	"last_scraped": 1570784656073,
+	"last_scraped": 1570792371332,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564248854714
 		}
 	],
-	"next_scrape": 1570824949426,
+	"next_scrape": 1570873544461,
 	"category": "coin_flipper",
-	"last_update": 1570784656073,
+	"last_update": 1570792371332,
 	"output": [
 		{
 			"args": {},
-			"calls": 2466841,
+			"calls": 2474591,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"TIME ",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1570777324878,
-	"edit": 233
+	"updt": 1570784761973,
+	"edit": 234
 }
