--- a/uknown_xb5p8t.mud.json
+++ b/uknown_xb5p8t.mud.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xb5p8t.mud",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xb5p8t.mud",
 	"sector": "VNP_3290",
 	"sec_level": 4,
 	"date_added": 1564665103923,
-	"last_scraped": 1570791214183,
+	"last_scraped": 1570799446138,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564665103923
 		}
 	],
-	"next_scrape": 1570835215977,
+	"next_scrape": 1570839986973,
 	"category": "dice_roller",
-	"last_update": 1570791214183,
+	"last_update": 1570799446138,
 	"output": [
 		{
 			"args": {},
-			"calls": 1603786,
+			"calls": 1618374,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"of an",
@@ -143,6 +143,6 @@
 			]
 		}
 	],
-	"updt": 1570783636972,
-	"edit": 150
+	"updt": 1570799428063,
+	"edit": 152
 }
