--- a/abandoned_tpnxm3.defender.json
+++ b/abandoned_tpnxm3.defender.json
@@ -1,12 +1,12 @@
 {
 	"_id": "abandoned_tpnxm3.defender",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abandoned_tpnxm3.defender",
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565715031572,
-	"last_scraped": 1570797948185,
+	"last_scraped": 1570805820998,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1570838110977,
+	"next_scrape": 1570852452590,
 	"category": "coin_flipper",
-	"last_update": 1570797948185,
+	"last_update": 1570805820998,
 	"output": [
 		{
 			"args": {},
-			"calls": 1620713,
+			"calls": 1632231,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ck?\\n2",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1570789954024,
-	"edit": 173
+	"updt": 1570798074654,
+	"edit": 174
 }
