--- a/uknown_el1qyf.access_data.json
+++ b/uknown_el1qyf.access_data.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_el1qyf.access_data",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_el1qyf.access_data",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570803408157,
+	"last_scraped": 1570810918772,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570795366803,
-	"edit": 110,
-	"next_scrape": 1570846382694,
+	"updt": 1570803486079,
+	"edit": 111,
+	"next_scrape": 1570856972677,
 	"category": "dice_roller",
-	"last_update": 1570803408157,
+	"last_update": 1570810918772,
 	"output": [
 		{
 			"args": {},
-			"calls": 948881,
+			"calls": 960946,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"21C7 ",
