--- a/unknown_yxz1xb.force_quit.json
+++ b/unknown_yxz1xb.force_quit.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yxz1xb.force_quit",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yxz1xb.force_quit",
 	"sector": "K_7243",
 	"sec_level": 1,
 	"date_added": 1560146973124,
-	"last_scraped": 1570812497515,
+	"last_scraped": 1570812534552,
 	"script_log": [
 		{
 			"type": "added",
@@ -22,15 +22,15 @@
 		]
 	],
 	"pl_output": "\n\n       `B----` `DFORCE QUIT BOX` `B----` \n\n            `bEnter` `Npassword`\n\n",
-	"next_scrape": 1570856878670,
-	"updt": 1570805292379,
-	"edit": 286,
+	"next_scrape": 1570852421342,
+	"updt": 1570812507125,
+	"edit": 287,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570812497515,
+	"last_update": 1570812534552,
 	"output": [
 		{
 			"args": {},
-			"calls": 30482225,
+			"calls": 30605857,
 			"base": "\n\n       `B----` `DFORCE QUIT BOX` `B----` \n\n            `bEnter` `Npassword`\n\n",
 			"fragments": [
 				" of t",
