--- a/unknown_h6yxmz.h0_key.json
+++ b/unknown_h6yxmz.h0_key.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_h6yxmz.h0_key",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_h6yxmz.h0_key",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566878677364,
-	"last_scraped": 1570807743030,
+	"last_scraped": 1570815409942,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566878677364
 		}
 	],
-	"next_scrape": 1570853483405,
+	"next_scrape": 1570860469504,
 	"category": "plant_sim",
-	"last_update": 1570807743030,
+	"last_update": 1570815409942,
 	"output": [
 		{
 			"args": {},
@@ -49,7 +49,7 @@
 		},
 		{
 			"args": {},
-			"calls": 149374,
+			"calls": 151535,
 			"base": "c:\"1wseae\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"rajbh",
@@ -93,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1570800557648,
-	"edit": 177
+	"updt": 1570807771991,
+	"edit": 178
 }
