--- a/unknown_hnd65y.ch.json
+++ b/unknown_hnd65y.ch.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_hnd65y.ch",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_hnd65y.ch",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570810565566,
+	"last_scraped": 1570818126488,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570803486079,
-	"edit": 84,
-	"next_scrape": 1570856890324,
+	"updt": 1570810705216,
+	"edit": 85,
+	"next_scrape": 1570864375162,
 	"category": "dice_roller",
-	"last_update": 1570810565566,
+	"last_update": 1570818126488,
 	"output": [
 		{
 			"args": {},
-			"calls": 672849,
+			"calls": 685397,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"heir ",
