--- a/unknown_8xqncq.lights.json
+++ b/unknown_8xqncq.lights.json
@@ -45,16 +45,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"ours.",
-						" Work",
 						"ere ou",
 						": You'",
+						"t\\n1E4B",
 						"rs. Wor",
+						" of hou",
+						" Workin",
 						"u're her",
 						"re here ",
 						"ore: You",
+						"g agains",
 						"Working ",
 						"E4B of h",
+						" hours. ",
 						"ainst\\n1E"
 					]
 				}
@@ -65,20 +68,23 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
-				"ours.",
-				" Work",
 				"ere ou",
 				": You'",
+				"t\\n1E4B",
 				"rs. Wor",
+				" of hou",
+				" Workin",
 				"u're her",
 				"re here ",
 				"ore: You",
+				"g agains",
 				"Working ",
 				"E4B of h",
+				" hours. ",
 				"ainst\\n1E"
 			]
 		}
 	],
-	"updt": 1570783636972,
-	"edit": 262
+	"updt": 1570788373514,
+	"edit": 263
 }
