--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -6,16 +6,16 @@
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1564014839075,
-	"last_scraped": 1570822450546,
+	"last_scraped": 1570829566824,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564014839075
 		}
 	],
-	"next_scrape": 1570868084634,
+	"next_scrape": 1570875323668,
 	"category": "plant_sim",
-	"last_update": 1570822450546,
+	"last_update": 1570829566824,
 	"output": [
 		{
 			"args": {},
@@ -83,7 +83,7 @@
 		},
 		{
 			"args": {},
-			"calls": 154616,
+			"calls": 155645,
 			"base": "c:\"xbk5u7\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"n an ",
@@ -115,19 +115,28 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
+						"n an ",
+						"like ",
 						" an A",
+						" Imag",
 						"to tra",
+						"that t",
+						"t's a ",
 						"s a ta",
 						"hinks ",
 						"at's a",
+						"aleem.",
 						"ain an",
 						" AI de",
+						"y. ## I",
 						"tology.",
 						"at thin",
 						"an AI t",
 						"I desig",
 						"t thinks",
+						"ner, Sal",
 						"n AI tha",
+						"ike a pa",
 						"arty pla",
 						"a tautol"
 					]
@@ -135,25 +144,34 @@
 			]
 		}
 	],
-	"updt": 1570814763862,
-	"edit": 212,
+	"updt": 1570829190385,
+	"edit": 214,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 			"frags": [
+				"n an ",
+				"like ",
 				" an A",
+				" Imag",
 				"to tra",
+				"that t",
+				"t's a ",
 				"s a ta",
 				"hinks ",
 				"at's a",
+				"aleem.",
 				"ain an",
 				" AI de",
+				"y. ## I",
 				"tology.",
 				"at thin",
 				"an AI t",
 				"I desig",
 				"t thinks",
+				"ner, Sal",
 				"n AI tha",
+				"ike a pa",
 				"arty pla",
 				"a tautol"
 			]
