--- a/unknown_izqsg8.bank.json
+++ b/unknown_izqsg8.bank.json
@@ -17,8 +17,8 @@
 			"when": 1570599212034
 		}
 	],
-	"updt": 1568708982482,
-	"edit": 10,
+	"updt": 1570602128402,
+	"edit": 11,
 	"scrape_ct": 16,
 	"next_scrape": 1570641805758,
 	"category": "clicker",
@@ -46,14 +46,18 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"ve be",
 						"k you",
-						"u've b",
+						"een v",
 						"lory\\n",
 						"ou, Mal",
+						"ou've b",
 						"ery hel",
+						"n very h",
 						"A5 You'v",
 						" you, Ma",
-						"y\\n21A5 Y"
+						"y\\n21A5 Y",
+						"\\n21A5 Yo"
 					]
 				}
 			]
@@ -111,10 +115,16 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"ve be",
-						"een v",
+						"ry hel",
+						" you, ",
 						"you, Ma",
 						"ou've b",
+						"A5 You'",
+						"u, Mallo",
+						"ory\\n21A",
 						"n very h",
+						"e been v",
+						"5 You've",
 						"\\n21A5 Yo"
 					]
 				}
@@ -127,13 +137,16 @@
 			"frags": [
 				"ve be",
 				"k you",
-				"een v",
 				"lory\\n",
 				"ou, Mal",
 				"ou've b",
 				"ery hel",
+				"u, Mallo",
+				"ory\\n21A",
 				"n very h",
+				"e been v",
 				"A5 You'v",
+				"5 You've",
 				" you, Ma",
 				"y\\n21A5 Y",
 				"\\n21A5 Yo"
