--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_dk37v3.npcs",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dk37v3.npcs",
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566817634405,
-	"last_scraped": 1570829836433,
+	"last_scraped": 1570836697386,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1570873414027,
+	"next_scrape": 1570880332662,
 	"category": "plant_sim",
-	"last_update": 1570829836433,
+	"last_update": 1570836697386,
 	"output": [
 		{
 			"args": {},
@@ -116,7 +116,7 @@
 		},
 		{
 			"args": {},
-			"calls": 13849,
+			"calls": 15644,
 			"base": "c:\"mgvlps\" d:\"<f l n s w>\"\n**\n\n\n\n               \n                Ã\n               ÃÁÁo\n                ÃÃ\n               ",
 			"fragments": [
 				"al 3 ",
@@ -142,6 +142,6 @@
 			]
 		}
 	],
-	"updt": 1570822874581,
-	"edit": 169
+	"updt": 1570829867097,
+	"edit": 170
 }
