--- a/unknown_rjrzwu.fuckthisshitimout.json
+++ b/unknown_rjrzwu.fuckthisshitimout.json
@@ -6,16 +6,16 @@
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564141596158,
-	"last_scraped": 1570834472932,
+	"last_scraped": 1570841357159,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564141596158
 		}
 	],
-	"next_scrape": 1570876721702,
+	"next_scrape": 1570884142798,
 	"category": "plant_sim",
-	"last_update": 1570834472932,
+	"last_update": 1570841357159,
 	"output": [
 		{
 			"args": {},
@@ -268,6 +268,22 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 989,
+			"base": "c:\"kmgwj7\" d:\"<f l n s w>\"\n9*\n\n\n\n               \n                Ã\n               ÃOÃo\n                ÃÃ\n               ",
+			"fragments": [
+				"es yo",
+				"bhand",
+				"sentie",
+				"rs | B",
+				"over, ",
+				"ience ",
+				"teresti",
+				"ntience",
+				"andari |"
+			]
 		}
 	],
 	"identified": [
@@ -298,6 +314,6 @@
 			]
 		}
 	],
-	"updt": 1570829190385,
-	"edit": 154
+	"updt": 1570834609458,
+	"edit": 155
 }
