--- a/uknown_el1qyf.bot_brain.json
+++ b/uknown_el1qyf.bot_brain.json
@@ -95,11 +95,18 @@
 					"frags": [
 						"ying ",
 						"e, Ma",
+						"rin R.",
+						"e, use",
 						"213 Go",
+						"playing",
 						"n R.\\n2",
 						"ds.\\n22",
 						" cards.",
-						"ser Erin"
+						"ser Erin",
+						"oodbye, ",
+						"\\n2207 H",
+						"Have fun",
+						".\\n2207 "
 					]
 				}
 			]
@@ -111,6 +118,8 @@
 			"frags": [
 				"ng ca",
 				"e, Ma",
+				"rin R.",
+				"e, use",
 				"213 Go",
 				"n R.\\n2",
 				"fun pla",
@@ -118,11 +127,15 @@
 				" cards.",
 				"ser Erin",
 				"playing ",
+				"oodbye, ",
 				"ds.\\n221",
-				"07 Have "
+				"\\n2207 H",
+				"Have fun",
+				"07 Have ",
+				".\\n2207 "
 			]
 		}
 	],
-	"updt": 1570836411176,
-	"edit": 210
+	"updt": 1570843398727,
+	"edit": 211
 }
